Corregir nombre nelson

--- a/Reservas/Views/Shared/_Layout.cshtml
+++ b/Reservas/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
     <footer class="border-top text-muted text-center py-3 mt-5">
         <div class="container">
-            &copy; @DateTime.Now.Year - Reservas Médicas - Desarrollado por Nicolas
+            &copy; @DateTime.Now.Year - Reservas Médicas - Desarrollado por Nelson
         </div>
     </footer>
 
